test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/9.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:49e07260d294632038ce750823b327cc1d9381cdc63006f9921f6b27ca6b5e79
size 4560251
